[metadata]
author = Adam Pocock
author_email = adam@adampocock.com
maintainer = Adam Pocock
maintainer_email = adam@adampocock.com
name = fstoolbox
version = 2.1.0
description = An information theoretic feature selection toolbox.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = file: ../LICENSE
keywords = feast, feature, selection, fstoolbox
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
url = https://github.com/Craigacp/FEAST

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    pandas
    scikit-learn
python_requires = >=3.6, <4